--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flexbox-grid": "^2.1.2",
+    "react-grid-layout": "^0.18.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
